# fastapi-pymongo-userapp

./: .env  pyproject.toml
config/: db.py
students/: main.py
